# ValyriaTear

./: .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  Allacrost.cbp  Allacrost.sln  Allacrost.vcproj  Allacrost.vcxproj  Allacrost.vcxproj.filters  Allacrost2010.sln  CMakeLists.txt  COPYING.CC-BY-3  COPYING.CC-BY-SA-3  COPYING.CC0  ChangeLog  KWStyle.xml  LICENSES  LICENSES.txt  LinuxErrorUserMaintenanceCompilationHistoric.txt  MANUAL  Makefile.am  MapEditor.pro  Map_Editor.cbp  Map_Editor.vcproj  Map_Editor.vcxproj  Map_Editor.vcxproj.filters  Microsoft.VC80.CRT.manifest  NEWS  README  README-SDL.txt  README.md  README.txt  ValyriaTear-Info.plist  ValyriaTear.cbp  ValyriaTear.nsi  ValyriaTear.workspace  (+9 more)
po/: CMakeLists.txt  LINGUAS  config-valyriatear.pot  create_map_names_translatable_strings.sh  de.po  en@quot.po  en_GB.po  entities-valyriatear.pot  ep1-valyriatear.pot  ep2-valyriatear.pot  es.po  fr.po  gd.po  gl.po  inventory-valyriatear.pot  it.po  ja.po  nl_NL.po  pt_BR.po  pt_PT.po  ru.po  skills-valyriatear.pot  src-valyriatear.pot  sv.po  uk_UA.po  valyriatear.pot
po/de/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/es/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/fr/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/gd/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/gl/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/it/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/ja/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/nl_NL/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/pt_BR/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/pt_PT/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/ru/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/sv/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
po/uk_UA/: config-valyriatear.po  entities-valyriatear.po  ep1-valyriatear.po  ep2-valyriatear.po  inventory-valyriatear.po  skills-valyriatear.po  src-valyriatear.po
src/: .travis.yml  CMakeLists.txt  SDLMain.m  defs.h  main.cpp  main_options.cpp  main_options.h  utils.cpp  utils.h
src/common/: app_name.h  app_settings.cpp  app_settings.h  character_window.cpp  character_window.h  common.cpp  common.h  common_bindings.cpp  dialogue.cpp  dialogue.h  include_pch.h  message_window.cpp  message_window.h  options_handler.cpp  options_handler.h  position_2d.h  rectangle_2d.h
src/common/global/: battle_media.cpp  battle_media.h  global.cpp  global.h  global_actors.cpp  global_actors.h  global_effects.cpp  global_effects.h  global_event_group.cpp  global_event_group.h  global_objects.cpp  global_objects.h  global_skills.cpp  global_skills.h  global_target.cpp  global_target.h  global_utils.cpp  global_utils.h  home_map.cpp  home_map.h  quest_log.cpp  quest_log.h  shop_data.h  worldmap.cpp  worldmap.h  worldmap_location.cpp  worldmap_location.h
src/common/gui/: gui.cpp  gui.h  menu_window.cpp  menu_window.h  option.cpp  option.h  textbox.cpp  textbox.h
src/editor/: dialog_boxes.cpp  dialog_boxes.h  editor.cpp  editor.h  editor_main.cpp  grid.cpp  grid.h  skill_editor.cpp  skill_editor.h  sprites.cpp  sprites.h  tileset.cpp  tileset.h  tileset_editor.cpp  tileset_editor.h
src/engine/: effect_supervisor.cpp  effect_supervisor.h  engine_bindings.cpp  indicator_supervisor.cpp  indicator_supervisor.h  input.cpp  input.h  mode_manager.cpp  mode_manager.h  script_supervisor.cpp  script_supervisor.h  system.cpp  system.h
src/engine/audio/: audio.cpp  audio.h  audio_descriptor.cpp  audio_descriptor.h  audio_effects.cpp  audio_effects.h  audio_input.cpp  audio_input.h  audio_stream.cpp  audio_stream.h
src/engine/script/: script.cpp  script.h  script_modify.cpp  script_modify.h  script_read.cpp  script_read.h  script_write.cpp  script_write.h
src/engine/video/: color.h  context.h  coord_sys.h  effects.cpp  fade.cpp  fade.h  image.cpp  image.h  image_base.cpp  image_base.h  interpolator.cpp  interpolator.h  particle.h  particle_effect.cpp  particle_effect.h  particle_emitter.h  particle_keyframe.h  particle_manager.cpp  particle_manager.h  particle_system.cpp  particle_system.h  screen_rect.h  shake.cpp  shake.h  text.cpp  text.h  texture.cpp  texture.h  transform2d.cpp  (+6 more)
src/modes/: mode_bindings.cpp  mode_help_window.cpp  mode_help_window.h  pause.cpp  pause.h  scene.cpp  scene.h
src/test/: test_main.cpp  test_main.h
src/utils/: exception.cpp  exception.h  gl_include.h  singleton.h  ustring.cpp  ustring.h  utils_common.h  utils_files.cpp  utils_files.h  utils_numeric.cpp  utils_numeric.h  utils_pch.cpp  utils_pch.h  utils_random.cpp  utils_random.h  utils_strings.cpp  utils_strings.h
txt/: CMakeLists.txt  Makevars  POTFILES.in  allacrost.pot  build_mo_linux.sh  en@quot.po  es.po  pt_BR.po
(+1827 files in other folders)
